<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dm">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_bar">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/back_icon"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="25dp"
            android:text="Loading..."
            android:textColor="#313133"
            android:textSize="25dp"
            android:textStyle="bold"

            />

        <ImageView
            android:id="@+id/audio_call"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/call_icon"
            android:layout_marginRight="85dp"
            android:layout_marginTop="33dp" />

        <ImageView
            android:id="@+id/video_call"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/videocall_icon"
            android:layout_marginRight="26dp"
            android:layout_marginTop="30dp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/pfp_frame"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pfp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/affan_pfp"
                app:shapeAppearanceOverlay="@style/CircleShape" />
        </FrameLayout>

        <TextView
            android:id="@+id/view_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pfp_frame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/msg_l_background"
            android:paddingLeft="25dp"
            android:paddingTop="7dp"
            android:paddingRight="25dp"
            android:paddingBottom="7dp"
            android:text="View Profile"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_msgs"
        android:layout_below="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:paddingTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/other_msg"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recycler_view_msgs"
        android:id="@+id/typing">

        <EditText
            android:id="@+id/type_msg"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/typing_bg_l"
            android:layout_margin="10dp"
            android:textColorHint= "#C2BAB3"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:layout_alignParentBottom="true"
            android:hint="Enter Message...."/>
        
        <ImageView
            android:id="@+id/send_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/send_icon"
            android:layout_alignRight="@+id/type_msg"
            android:layout_alignBottom="@+id/type_msg"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.8"
            />

    </RelativeLayout>

</RelativeLayout>