<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:src="@drawable/connect_me_logo2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/great"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Great!"
        android:textColor="#313133"
        android:layout_marginTop="210dp"
        android:textSize="25dp"
        android:paddingLeft="25dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_below="@+id/great"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="We're so excited to get you onboard!"
        android:textColor="#313133"
        android:textSize="18dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_below="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Name"
        android:paddingLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"

        />
    <EditText
        android:id="@+id/username"
        android:layout_below="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Username"
        android:paddingLeft="40dp"
        android:background="@android:color/transparent"

        />

    <EditText
        android:id="@+id/phone_no"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Phone Number"
        android:paddingLeft="40dp"
        android:background="@android:color/transparent"

        />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/phone_no"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Email"
        android:paddingLeft="40dp"
        android:background="@android:color/transparent"
        />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Password"
        android:paddingLeft="40dp"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/tos"
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="By clicking Agree and continue below, I agree to\nTerms of Service and Privacy Policy."
        android:textColor="#000000"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/register"
        android:layout_below="@+id/tos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_rectangle"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:elevation="4dp"
        />

    <RelativeLayout
        android:layout_below="@id/register"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Already have an account?"
            android:textColor="#313133"
            android:textSize="20dp"
            android:paddingLeft="50dp"

            />
        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Login"
            android:textColor="#59442F"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingLeft="284dp"
            android:clickable="true"
            android:focusable="true"
            />

    </RelativeLayout>


</RelativeLayout>