<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:text="Hello,How Are You"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/msg_l_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/msg"
        android:id="@+id/msg_time"
        android:layout_marginRight="20dp"
        android:textSize="10dp"
        android:layout_below="@+id/msg"
        android:layout_marginTop="3dp"
        android:text="10:30"
        android:alpha="0.5"/>

</RelativeLayout>