...
        android:text="Hamna Daud"
        android:textColor="#313133"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/login"
        android:right="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invite"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_rectangle"
...
