<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:src="@drawable/connect_me_logo2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textColor="#313133"
        android:layout_marginTop="210dp"
        android:textSize="25dp"
        android:paddingLeft="25dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_below="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="We're happy to see you. Please login to continue."
        android:textColor="#313133"
        android:textSize="18dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="Email"
        android:paddingLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"

        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="Password"
        android:paddingLeft="40dp"
        android:background="@android:color/transparent"

        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#A79584"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        />

    <TextView
        android:id="@+id/login"
        android:layout_below="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_rectangle"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:elevation="4dp"
        />

    <View
        android:layout_below="@id/login"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="20dp"
        />


    <TextView
        android:id="@+id/continue_with"
        android:layout_below="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or continue with"
        android:textColor="#000000"
        android:background="#F2F4F9"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="20dp"

        />

    <LinearLayout
        android:id="@+id/sm_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/continue_with"
        android:layout_marginTop="2dp">

        <RelativeLayout
            android:id="@+id/googleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="21dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_filled"
               />

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/google_icon" />
        </RelativeLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/applesIcon"
            android:src="@drawable/apple_icon"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/facebookIcon"
            android:src="@drawable/facebook_icon"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/sm_icons"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Don't have an account?"
            android:textColor="#313133"
            android:textSize="20dp"
            android:paddingLeft="60dp"

            />
        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Register"
            android:textColor="#59442F"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingLeft="270dp"
            android:clickable="true"
            android:focusable="true"
            />

    </RelativeLayout>


</RelativeLayout>