...

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/back_button"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/follow_req_item"/>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
...
